--- a/templates/register.html
+++ b/templates/register.html
@@ -18,10 +18,11 @@
             <ul class="nav-menu">
                 <li><a href="{{ url_for('login') }}" class="nav-link">Home</a></li>
                 <li><a href="{{ url_for('dashboard') }}" class="nav-link">Dashboard</a></li>
+                {% if is_admin %}
                 <li><a href="{{ url_for('create_item') }}" class="nav-link">Create Item</a></li>
+                {% endif %}
                 <li><a href="{{ url_for('report') }}" class="nav-link">Report Items</a></li>
                 <li><a href="{{ url_for('search') }}" class="nav-link">Search Items</a></li>
-                <li><a href="{{ url_for('invoice') }}" class="nav-link">Generate Invoice</a></li>
                 <li><a href="{{ url_for('about') }}" class="nav-link">About</a></li>
                 <li><a href="{{ url_for('login') }}" class="nav-link">Login</a></li>
                 <li><a href="{{ url_for('register') }}" class="nav-link active">Register</a></li>
